BuddyPress.org: More responsive'ish styling tweaks. Fix toolbar on mobile. See #691.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@1262 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/buddypress.org/public_html/wp-content/themes/bb-base/style.css
+++ b/buddypress.org/public_html/wp-content/themes/bb-base/style.css
@@ -55,10 +55,6 @@ body {
 	opacity: 0.95;
 }
 
-body.bbpress #main,
-body.buddypress #main {
-	width: 100%;
-}
 body.page-template-page-homepage-php #header {
 	position: relative;
 	box-shadow: none;
@@ -1513,6 +1509,18 @@ div.plugin-meta img {
 /* =Responsive Overrides
 -------------------------------------------------------------- */
 
+/* Force widths for desktops */
+@media screen and ( min-width: 960px )  {
+	#header-inner,
+	#headline-inner,
+	#subnav-inner,
+	#showcase-inner,
+	#main,
+	#footer {
+		width: 960px;
+	}
+}
+
 /* Do not fix #header for non-desktops */
 @media screen and ( max-width: 782px ) {
 	#header {
@@ -1522,25 +1530,6 @@ div.plugin-meta img {
 	}
 	#wpadminbar {
 		position: absolute;
-	}
-}
-
-/* Force widths for desktops */
-@media screen and ( min-width: 960px )  {
-	#header-inner {
-		width: 960px;
-	}
-	#headline-inner {
-		width: 960px;
-	}
-	#subnav-inner {
-		width: 960px;
-	}
-	#showcase-inner {
-		width: 960px;
-	}
-	#footer {
-		width: 960px;
 	}
 }
 
