--- a/buddypress.org/public_html/wp-content/themes/codex-bbpress-org/style.css
+++ b/buddypress.org/public_html/wp-content/themes/codex-bbpress-org/style.css
@@ -46,7 +46,7 @@
 }
 .footer-meta-wrap .footer-meta {
 	margin: 0 auto;
-	width: 960px;
+	width: 100%;
 	padding: 24px 0;
 	overflow: auto;
 	color: #555;
