--- a/buddypress.org/public_html/wp-content/themes/codex-buddypress-org/less/b_footer.less
+++ b/buddypress.org/public_html/wp-content/themes/codex-buddypress-org/less/b_footer.less
@@ -9,7 +9,7 @@
 
 	.footer-meta {
 		margin: 0 auto;
-		width: 960px;
+		width: 100%;
 		padding: 24px 0;
 		overflow: auto;
 		color: #555;
